--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "messenger-bot",
+  "name": "jerry-bot-panel",
   "version": "1.0.0",
-  "description": "Messenger bot with webpanel for appstate and owner UID",
-  "main": "bot.js",
+  "description": "Facebook Bot with Web Panel",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "ws3-fca": "^1.0.3",
-    "moment": "^2.29.4",
-    "npmlog": "^6.0.2",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
+    "ws3-fca": "1.0.3",
+    "axios": "^1.6.0",
+    "request": "^2.88.2"
   },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": ["facebook", "bot", "panel", "automation"],
+  "author": "JERRY",
+  "license": "MIT"
 }
