--- a/package.json
+++ b/package.json
@@ -2,22 +2,33 @@
   "name": "jerry-bot-panel",
   "version": "1.0.0",
   "description": "Facebook Bot with Web Panel",
-  "main": "bot.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node bot.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "install-deps": "npm install express@4.18.2 multer@1.4.4 axios@1.5.0 request@2.88.2 ws3-fca@latest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "ws3-fca": "1.0.3",
-    "axios": "^1.6.0",
-    "request": "^2.88.2"
+    "express": "4.18.2",
+    "multer": "1.4.4",
+    "axios": "1.5.0",
+    "request": "2.88.2",
+    "ws3-fca": "1.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "2.0.22"
   },
-  "keywords": ["facebook", "bot", "panel", "automation"],
-  "author": "JERRY",
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "keywords": [
+    "facebook",
+    "bot",
+    "panel",
+    "automation",
+    "ws3-fca"
+  ],
+  "author": "Your Name",
   "license": "MIT"
 }
