--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "multer": "1.4.4",
     "axios": "1.5.0",
     "request": "2.88.2",
-    "ws3-fca": "1.0.1"
+    "ws3-fca": "1.0.1",
+      "npmlog": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
