--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "jerry-bot-panel",
   "version": "1.0.0",
   "description": "Facebook Bot with Web Panel",
-  "main": "server.js",
+  "main": "keep_alive.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node keep_alive.js",
+    "dev": "nodemon keep_alive.js",
     "install-deps": "npm install express@4.18.2 multer@1.4.4 axios@1.5.0 request@2.88.2 ws3-fca@latest"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "axios": "1.5.0",
     "request": "2.88.2",
     "ws3-fca": "1.0.1",
-      "npmlog": "^6.0.2"
+    "npmlog": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "2.0.22"
@@ -23,13 +23,7 @@
     "node": ">=14.0.0",
     "npm": ">=6.0.0"
   },
-  "keywords": [
-    "facebook",
-    "bot",
-    "panel",
-    "automation",
-    "ws3-fca"
-  ],
+  "keywords": ["facebook", "bot", "panel", "automation", "ws3-fca"],
   "author": "Your Name",
   "license": "MIT"
 }
